Fix overflow.

--- a/framebuzz/static/framebuzz/profiles/sass/screen.scss
+++ b/framebuzz/static/framebuzz/profiles/sass/screen.scss
@@ -872,9 +872,10 @@ body.profiles {
                 div.scroller {
                     background-color: #393535;
                     height: 106px;
-                    overflow: scroll;
                     padding: 1px 9px;
                     word-wrap: break-word;
+                    overflow-x: none;
+                    overflow-y: scroll;
                 }
             }
 
